# vestengine

./: .gitignore  ANALYSIS.md  CHANGELOG.md  CMakeLists.txt  FASE1_COMPLETADA.md  LICENSE  PLAN.md  README.md  README.md.bak  TODO.md  imgui.ini  run_sandbox.bat  run_sandbox.sh  sandbox_final.txt  sandbox_log.txt  sandbox_output.txt  test_minimal.cpp
Editor/: CMakeLists.txt
Editor/src/: EditorApplication.cpp  EditorCamera.cpp  EditorCamera.h  EditorLayer.cpp  EditorLayer.h
Editor/src/Commands/: CommandManager.h  EntityCommands.h  ICommand.h  MacroCommand.h  TransformCommand.h
Editor/src/Gizmo/: GizmoController.h
Editor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  StatsPanel.cpp  StatsPanel.h  ViewportPanel.cpp  ViewportPanel.h
Editor/src/Rendering/: GridRenderer.cpp  GridRenderer.h  SelectionRenderer.cpp  SelectionRenderer.h
Editor/src/Scene/: SceneObject.h
Tests/: CMakeLists.txt  TestMain.cpp
Tests/Commands/: CommandTests.cpp
Tests/Core/: LogTests.cpp
Tests/Serialization/: SceneSerializerTests.cpp
VestEngine/: CMakeLists.txt
VestEngine/src/Core/: Application.cpp  Application.h  Base.h  EntryPoint.h  Event.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Timestep.h  Window.cpp  Window.h
VestEngine/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
VestEngine/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
VestEngine/src/Rendering/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  RenderAPI.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
VestEngine/src/Rendering/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
VestEngine/src/Rendering/Platform/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanShader.cpp  VulkanShader.h
VestEngine/src/Scene/: SceneObject.h
VestEngine/src/Serialization/: SceneSerializer.cpp  SceneSerializer.h
assets/scenes/assets/scenes/: Default.json
docs/: ANALYSIS.md  ARCHITECTURE.md  CONTEXT.md  DEVELOPMENT.md  PLAN.md
sandbox/: CMakeLists.txt  main.cpp
shaders/: FlatColor.glsl  Texture.glsl
src/: CMakeLists.txt
src/core/: Application.cpp  Application.h  EntryPoint.h  Logger.cpp  Logger.h  Time.cpp  Time.h  Window.cpp  Window.h
src/input/: Input.cpp  Input.h
src/rendering/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  GraphicsContext.cpp  GraphicsContext.h  Mesh.cpp  Mesh.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RenderingAPI.h  Shader.cpp  Shader.cpp.old  Shader.h  Texture.cpp  Texture.h
src/rendering/Platform/OpenGL/: OpenGLShader.cpp  OpenGLShader.h
tests/: CMakeLists.txt
